--- a/public/css/styles_users_pages.css
+++ b/public/css/styles_users_pages.css
@@ -1045,7 +1045,7 @@ and (max-device-width : 1024px)
 and (orientation : landscape) {
 
   .l3{
-    width: 33.33% !impor;
+    width: 33.33% !important;
   }
 }
 
