--- a/public/css/styles_users_pages.css
+++ b/public/css/styles_users_pages.css
@@ -1179,6 +1179,14 @@ height: 16px !important;
         padding-top: 30px !important;
     }
 
+    .imgExperts{
+      max-width: 150px !important;
+    }
+
+    .expertoscard{
+      height: 500px !important;
+    }
+
 
 
 }
